tests/integration/snapshots/integration__snapshots__json_via_binary.snap
---
source: tests/integration/snapshots.rs
expression: out.stdout
---
[
  {
<FIXTURE>/vulnerable.vue",
    "rule_id": "vue/security/no-v-html",
    "rule_name": "no-v-html",
    "severity": "critical",
    "category": "security",
    "message": "Unsafe `v-html` directive renders untrusted HTML",
    "help": "Rendering untrusted HTML can execute arbitrary JavaScript. Sanitise the input with DOMPurify (or an equivalent library), or use `v-text` / `{ }` interpolation instead.",
    "byte_offset": 28,
    "byte_length": 18,
    "ignored": false
  },
  {
<FIXTURE>/vulnerable.vue",
    "rule_id": "vue/security/no-dynamic-bind-src",
    "rule_name": "no-dynamic-bind-src",
    "severity": "high",
    "category": "security",
    "message": "Dynamic `src` binding can load untrusted resources",
    "help": "Validate and sanitise the URL before binding it. Allow only an explicit allow-list of schemes (https, /) and hosts, and never concatenate user input into the URL.",
    "byte_offset": 70,
    "byte_length": 15,
    "ignored": false
  },
  {
<FIXTURE>/vulnerable.vue",
    "rule_id": "vue/best-practice/no-inline-style",
    "rule_name": "no-inline-style",
    "severity": "low",
    "category": "best-practice",
    "message": "Inline styles can hurt performance and maintainability",
    "help": "Use a CSS class instead. Inline styles bypass the cascade, prevent theming, and tend to grow as the component evolves.",
    "byte_offset": 96,
    "byte_length": 36,
    "ignored": false
  },
  {
<FIXTURE>/vulnerable.vue",
    "rule_id": "vue/best-practice/no-watch-with-callback",
    "rule_name": "no-watch-with-callback",
    "severity": "low",
    "category": "best-practice",
    "message": "`watch` with a callback can leak memory if not cleaned up",
    "help": "Prefer `watchEffect`, or make sure the watcher is stopped via the returned handle inside `onScopeDispose` / `onUnmounted`.",
    "byte_offset": 292,
    "byte_length": 69,
    "ignored": false
  }
]
