tests/integration/snapshots/integration__snapshots__pretty_clean.snap
---
source: tests/integration/snapshots.rs
assertion_line: 143
expression: combined
---

No violations found.
