tests/integration/snapshots/integration__snapshots__pretty_with_ignores.snap
---
source: tests/integration/snapshots.rs
expression: combined
---

<FIXTURE>/with_ignores.vue
error[vue/security/no-v-html]: Unsafe `v-html` directive renders untrusted HTML
<FIXTURE>/with_ignores.vue:2:8
  |
2 |   <div v-html="raw">flagged, no comment</div>
  |        ^^^^^^^^^^^^ here
  |
  = help: Rendering untrusted HTML can execute arbitrary JavaScript. Sanitise the input with DOMPurify (or an equivalent library), or use `v-text` / `{ }` interpolation instead.
error[vue/security/no-v-html]: Unsafe `v-html` directive renders untrusted HTML
<FIXTURE>/with_ignores.vue:4:8
  |
4 |   <div v-html="trusted">silenced by previous-line comment</div>
  |        ^^^^^^^^^^^^^^^^ (ignored)
  |
  = help: Rendering untrusted HTML can execute arbitrary JavaScript. Sanitise the input with DOMPurify (or an equivalent library), or use `v-text` / `{ }` interpolation instead.
error[vue/security/no-inner-html]: `.innerHTML` assignment introduces a DOM XSS sink
<FIXTURE>/with_ignores.vue:11:1
   |
11 | el.innerHTML = raw  // will be flagged (no ignore)
   | ^^^^^^^^^^^^^^^^^^ here
   |
   = help: Setting `.innerHTML` from a dynamic value lets an attacker inject script tags and event handlers. Use `textContent` for plain text, or sanitise the value with DOMPurify before insertion.
error[vue/security/no-inner-html]: `.innerHTML` assignment introduces a DOM XSS sink
<FIXTURE>/with_ignores.vue:12:1
   |
12 | el.innerHTML = trusted  // vuer-ignore[no-inner-html]
   | ^^^^^^^^^^^^^^^^^^^^^^ (ignored)
   |
   = help: Setting `.innerHTML` from a dynamic value lets an attacker inject script tags and event handlers. Use `textContent` for plain text, or sanitise the value with DOMPurify before insertion.

4 violations: 2 critical (2 ignored)
